[project]
name = "rlplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pip>=26.0.1",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.0",
]



[project.scripts]
rlplayground = "rlplayground:main"



[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"


[tool.uv.workspace]
members = [
    "rlplayground",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["rlplayground"]



