[project]
name = "rlplayground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[all]>=1.2.3",
    "keras>=3.13.2",
    "pip",
    "tensorflow>=2.20.0",
]


[dependency-groups]
dev = [
]


[project.scripts]
rlplayground = "rlplayground:main"



[build-system]
requires = ["uv_build>=0.9.26,<0.11.0"]
build-backend = "uv_build"


[tool.uv.workspace]
members = [
    "rlplayground",
]

[tool.uv]
default-groups = "all"


